--- a/src/main/webapp/app/entities/issue/issues.html
+++ b/src/main/webapp/app/entities/issue/issues.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="issue.new" >
+                <button class="btn btn-primary" ui-sref="issue.newadmin" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down" >
                         Create new Issue
