--- a/src/main/webapp/app/entities/userstory/userstory-detail.html
+++ b/src/main/webapp/app/entities/userstory/userstory-detail.html
@@ -1,39 +1,72 @@
-
 <div>
-    <h2><span>Userstory</span> {{vm.userstory.id}}</h2>
-    <hr>
-    <jhi-alert-error></jhi-alert-error>
-    <dl class="row jh-entity-details">
-        <dt><span>Title</span></dt>
-        <dd>
-            <span>{{vm.userstory.title}}</span>
-        </dd>
-        <dt><span>Description</span></dt>
-        <dd>
-            <span>{{vm.userstory.description}}</span>
-        </dd>
-        <dt><span>Comments</span></dt>
-        <dd>
-            <span>{{vm.userstory.comments}}</span>
-        </dd>
-        <dt><span>Status</span></dt>
-        <dd>
-            <span>{{vm.userstory.status}}</span>
-        </dd>
-        <dt><span>Priority</span></dt>
-        <dd>
-            <span>{{vm.userstory.priority}}</span>
-        </dd>
-    </dl>
+    <div class="col-md-2" style="background-color: #00b3ee; height: 1000px">
+        <div id="projectsidebar">
+            <span>
+                  <h4>My Projects</h4>
+            </span>
+            <span>
+                <button class="btn btn-primary" ui-sref="project.new">
+                <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </span>
+            <div ng-repeat="project in vm.myProjects track by project.id">
+                {{project.name}} <button type="submit"
+                                         ui-sref="project-detail({id:project.id})"
+                                         class="btn btn-sm">
+                <span class="glyphicon glyphicon-eye-open"></span>
+                <span class="hidden-sm-down"></span>
+            </button>
+            </div>
+        </div>
 
-    <button type="submit"
-            ui-sref="{{ vm.previousState }}"
-            class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
-    </button>
 
-    <button type="button" ui-sref="userstory-detail.edit({id:vm.userstory.id})" class="btn btn-primary">
-        <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-sm-down"> Edit</span>
-    </button>
+    </div>
+    <div class="col-md-10" style="background-color: #9c27b0; height: 1000px">
+        <div>
+            <h2><span>Userstory</span> {{vm.userstory.id}}</h2>
+            <hr>
+            <jhi-alert-error></jhi-alert-error>
+            <dl class="row jh-entity-details">
+                <dt><span>Title</span></dt>
+                <dd>
+                    <span>{{vm.userstory.title}}</span>
+                </dd>
+                <dt><span>Description</span></dt>
+                <dd>
+                    <span>{{vm.userstory.description}}</span>
+                </dd>
+                <dt><span>Comments</span></dt>
+                <dd>
+                    <span>{{vm.userstory.comments}}</span>
+                </dd>
+                <dt><span>Status</span></dt>
+                <dd>
+                    <span>{{vm.userstory.status}}</span>
+                </dd>
+                <dt><span>Priority</span></dt>
+                <dd>
+                    <span>{{vm.userstory.priority}}</span>
+                </dd>
+                <dt><span>Project</span></dt>
+                <dd>
+                    <a ui-sref="project-detail({id:vm.userstory.project.id})">{{vm.userstory.project.id}}</a>
+                </dd>
+            </dl>
+
+            <button type="submit"
+                    ui-sref="home"
+                    class="btn btn-info">
+                <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+            </button>
+
+            <button type="button" ui-sref="userstory-detail.edit({id:vm.userstory.id})" class="btn btn-primary">
+                <span class="glyphicon glyphicon-pencil"></span>
+                <span class="hidden-sm-down"> Edit</span>
+            </button>
+        </div>
+
+    </div>
+
 </div>
+
+
