--- a/src/main/webapp/app/entities/issue/issues.html
+++ b/src/main/webapp/app/entities/issue/issues.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="issue.newadmin" >
+                <button class="btn btn-primary" ui-sref="issue.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down" >
                         Create new Issue
@@ -41,6 +41,7 @@
                     <th><span>Status</span></th>
                     <th><span>Priority</span></th>
                     <th><span>Project</span></th>
+                    <th><span>Userstory</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -53,6 +54,9 @@
                     <td>{{issue.priority}}</td>
                     <td>
                         <a ui-sref="project-detail({id:issue.project.id})">{{issue.project.name}}</a>
+                    </td>
+                    <td>
+                        <a ui-sref="userstory-detail({id:issue.userstory.id})">{{issue.userstory.title}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
