--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -61,6 +61,11 @@
                     <span class="glyphicon glyphicon-pencil"></span>
                     <span class="hidden-sm-down"> Edit</span>
                 </button>
+
+                <button type="button" ui-sref="project-detail.addmember({id:vm.project.id})" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                    <span class="hidden-sm-down"> Add Member</span>
+                </button>
             </div>
         </row>
 
@@ -70,7 +75,7 @@
             <h2>Userstories</h2>
             <div class="row">
                 <div class="col-xs-4 no-padding-left">
-                    <button class="btn btn-primary" ui-sref="userstory.new({pid: vm.project.id})" >
+                    <button class="btn btn-primary" ng-click=" vm.addus()">
                         <span class="glyphicon glyphicon-plus"></span>
                         <span class="hidden-xs-down" >
                         Create new Userstory
@@ -131,15 +136,13 @@
             </div>
         </div>
 
-        ISSUES SECTION
-
-        <div class="row">
+        <div>
             <div>
                 <h2>Issues</h2>
                 <div>
                     <div class="row">
                         <div class="col-xs-4 no-padding-left">
-                            <button class="btn btn-primary" ui-sref="issue.new({pid: vm.project.id})" >
+                            <button class="btn btn-primary" ng-click="vm.addissue()" >
                                 <span class="glyphicon glyphicon-plus"></span>
                                 <span class="hidden-xs-down" >
                         Create new Issue
@@ -158,7 +161,7 @@
                             <th><span>Comments</span></th>
                             <th><span>Status</span></th>
                             <th><span>Priority</span></th>
-                            <th><span>Project</span></th>
+                            <th><span>UserStory</span></th>
                             <th></th>
                         </tr>
                         </thead>
@@ -170,7 +173,7 @@
                             <td>{{issue.status}}</td>
                             <td>{{issue.priority}}</td>
                             <td>
-                                <a ui-sref="project-detail({id:issue.project.id})">{{issue.project.name}}</a>
+                                <a ui-sref="project-detail({id:issue.project.id})">{{issue.userstory.title}}</a>
                             </td>
                             <td class="text-right">
                                 <div class="btn-group flex-btn-group-container">
