pre-requirement MERGE HERE

--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -23,7 +23,7 @@
 
 
     </div>
-    <div class="col-md-7" style="background-color: #9c27b0; height: 5000px">
+    <div class="col-md-7" style="background-color: #abb0a4; height: 5000px">
         <jhi-alert></jhi-alert>
         <row>
             <div>
@@ -145,8 +145,8 @@
                             <button class="btn btn-primary" ng-click="vm.addissue()" >
                                 <span class="glyphicon glyphicon-plus"></span>
                                 <span class="hidden-xs-down" >
-                        Create new Issue
-                    </span>
+                                    Create new Issue
+                                </span>
                             </button>
                         </div>
                     </div>
