--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -1,7 +1,7 @@
 
 
 <div>
-    <div class="col-md-2" style="background-color: #00b3ee; height: 5000px">
+    <div class="col-xs-2 col-md-2" style="background-color: #00b3ee">
         <div id="projectsidebar">
             <span>
                   <h4>My Projects</h4>
@@ -23,7 +23,7 @@
 
 
     </div>
-    <div class="col-md-7" style="background-color: #abb0a4; height: 5000px">
+    <div class="col-md-7" style="background-color: #abb0a4">
         <jhi-alert></jhi-alert>
         <row>
             <div>
@@ -52,9 +52,22 @@
                     </dd>
                     <dt><span>Project Member</span></dt>
                     <dd>
-            <span ng-repeat="pmember in vm.project.pmembers">
-                {{pmember.login}}{{$last ? '' : ', '}}
-            </span>
+                        <div class="panel-group" id="accordionpmember">
+                            <div class="panel panel-default" ng-repeat="pmember in vm.project.pmembers">
+                                <div class="panel-heading">
+                                    <p class="panel-title btn btn-primary" data-toggle="collapse" data-parent="#accordionpmember" data-target="#pmemberid{{pmember.id}}">
+                                        <a data-toggle="collapse" data-parent="#accordionpmember" data-target="#pmemberid{{pmember.id}}">
+                                        {{pmember.login}}
+                                        </a>
+                                    </p>
+                                </div>
+                                <div id="pmemberid{{pmember.id}}" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        {{pmember.login}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </dd>
                 </dl>
                 <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="btn btn-primary">
@@ -83,56 +96,25 @@
                     </button>
                 </div>
             </div>
-            <div class="table-responsive">
-                <table class="jh-table table table-striped">
-                    <thead>
-                    <tr>
-                        <th><span>ID</span></th>
-                        <th><span>Title</span></th>
-                        <th><span>Description</span></th>
-                        <th><span>Comments</span></th>
-                        <th><span>Status</span></th>
-                        <th><span>Priority</span></th>
-                        <th><span>Project</span></th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="userstory in vm.userstories track by userstory.id">
-                        <td><a ui-sref="userstory-detail({id:userstory.id})">{{userstory.id}}</a></td>
-                        <td>{{userstory.title}}</td>
-                        <td>{{userstory.description}}</td>
-                        <td>{{userstory.comments}}</td>
-                        <td>{{userstory.status}}</td>
-                        <td>{{userstory.priority}}</td>
-                        <td>
-                            <a ui-sref="project-detail({id:userstory.project.id})">{{userstory.project.id}}</a>
-                        </td>
-                        <td class="text-right">
-                            <div class="btn-group flex-btn-group-container">
-                                <button type="submit"
-                                        ui-sref="userstory-detail({id:userstory.id})"
-                                        class="btn btn-info btn-sm">
-                                    <span class="glyphicon glyphicon-eye-open"></span>
-                                    <span class="hidden-sm-down"></span>
-                                </button>
-                                <button type="submit"
-                                        ui-sref="userstory.edit({id:userstory.id})"
-                                        class="btn btn-primary btn-sm">
-                                    <span class="glyphicon glyphicon-pencil"></span>
-                                    <span class="hidden-sm-down"></span>
-                                </button>
-                                <button type="submit"
-                                        ui-sref="userstory.delete({id:userstory.id})"
-                                        class="btn btn-danger btn-sm">
-                                    <span class="glyphicon glyphicon-remove-circle"></span>
-                                    <span class="hidden-sm-down"></span>
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+            <!-- Accordion panel start -->
+            <div class="panel-group" id="accordionuserstory">
+                <!-- pannel repeats -->
+                <div class="panel panel-default" ng-repeat="userstory in vm.userstories track by userstory.id">
+                    <div class="panel-heading">
+                        <!-- making a button of the header and attaching to the accordion -->
+                        <p class="panel-title btn btn-primary" data-toggle="collapse" data-parent="#accordionuserstory" data-target="#userstoryid{{userstory.id}}">
+                            <a data-toggle="collapse" data-parent="#accordionuserstory" data-target="#userstoryid{{userstory.id}}">
+                            {{userstory.id}}: {{userstory.title}}
+                            </a>
+                        </p>
+                    </div>
+                    <div id="userstoryid{{userstory.id}}" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <div ui-view="userstory-detail({id:userstory.id})">View</div>
+                            <div ui-sref="userstory-detail({id:userstory.id})">Link</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
