added requirement layer

--- a/src/main/webapp/app/entities/requirement/requirement-dialog.html
+++ b/src/main/webapp/app/entities/requirement/requirement-dialog.html
@@ -30,6 +30,12 @@
             </select>
         </div>
 
+        <div class="form-group">
+            <label for="field_project">Project</label>
+            <select class="form-control" id="field_project" name="project" ng-model="vm.requirement.project" ng-options="project as project.id for project in vm.projects track by project.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
