--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -71,6 +71,68 @@
 
         <hr>
 
+
+        <!-- requirement -->
+        <div>
+            <h2>Requirements</h2>
+            <div class="row">
+                <div class="col-xs-4 no-padding-left">
+                    <button class="btn btn-primary" ng-click=" vm.addreq()">
+                        <span class="glyphicon glyphicon-plus"></span>
+                        <span class="hidden-xs-down" >
+                        Create new Requirement
+                    </span>
+                    </button>
+                </div>
+            </div>
+            <div class="table-responsive">
+                <table class="jh-table table table-striped">
+                    <thead>
+                    <tr>
+                        <th><span>ID</span></th>
+                        <th><span>Name</span></th>
+                        <th><span>Status</span></th>
+                        <th><span>Project</span></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="requirement in vm.requirements track by requirement.id">
+                        <td><a ui-sref="requirement-detail({id:requirement.id})">{{requirement.id}}</a></td>
+                        <td>{{requirement.name}}</td>
+                        <td>{{requirement.status}}</td>
+                        <td>
+                            <a ui-sref="project-detail({id:requirement.project.id})">{{requirement.project.id}}</a>
+                        </td>
+                        <td class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
+                                        ui-sref="requirement-detail({id:requirement.id})"
+                                        class="btn btn-info btn-sm">
+                                    <span class="glyphicon glyphicon-eye-open"></span>
+                                    <span class="hidden-sm-down"></span>
+                                </button>
+                                <button type="submit"
+                                        ui-sref="requirement.edit({id:requirement.id})"
+                                        class="btn btn-primary btn-sm">
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                    <span class="hidden-sm-down"></span>
+                                </button>
+                                <button type="submit"
+                                        ui-sref="requirement.delete({id:requirement.id})"
+                                        class="btn btn-danger btn-sm">
+                                    <span class="glyphicon glyphicon-remove-circle"></span>
+                                    <span class="hidden-sm-down"></span>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- userstory -->
         <div>
             <h2>Userstories</h2>
             <div class="row">
@@ -136,6 +198,7 @@
             </div>
         </div>
 
+        <!-- issues -->
         <div>
             <div>
                 <h2>Issues</h2>
