--- a/src/main/webapp/app/entities/requirement/requirement-detail.html
+++ b/src/main/webapp/app/entities/requirement/requirement-detail.html
@@ -12,6 +12,10 @@
         <dd>
             <span>{{vm.requirement.status}}</span>
         </dd>
+        <dt><span>Project</span></dt>
+        <dd>
+            <a ui-sref="project-detail({id:vm.requirement.project.id})">{{vm.requirement.project.id}}</a>
+        </dd>
     </dl>
 
     <button type="submit"
