--- a/src/main/webapp/app/entities/userstory/userstories.html
+++ b/src/main/webapp/app/entities/userstory/userstories.html
@@ -42,6 +42,7 @@
                     <th><span>Status</span></th>
                     <th><span>Priority</span></th>
                     <th><span>Project</span></th>
+                    <th><span>Requirement</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -55,6 +56,9 @@
                     <td>{{userstory.priority}}</td>
                     <td>
                         <a ui-sref="project-detail({id:userstory.project.id})">{{userstory.project.id}}</a>
+                    </td>
+                    <td>
+                        <a ui-sref="requirement-detail({id:userstory.requirement.id})">{{userstory.requirement.name}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
