--- a/src/main/webapp/app/entities/userstory/userstory-dialog.html
+++ b/src/main/webapp/app/entities/userstory/userstory-dialog.html
@@ -51,10 +51,15 @@
             </select>
         </div>
 
-        <!-- THE PROJECT WILL AUTOMATICALLY SET WHEN CREATED BY USER IN PROJECT-DETAIL -->
-        <div class="form-group" has-authority="ROLE_ADMIN">
+        <div class="form-group">
             <label for="field_project">Project</label>
-            <select class="form-control" id="field_project" name="project" ng-model="vm.userstory.project" ng-options="project as project.name for project in vm.projects track by project.id">
+            <select class="form-control" id="field_project" name="project" ng-model="vm.userstory.project" ng-options="project as project.id for project in vm.projects track by project.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="field_requirement">Requirement</label>
+            <select class="form-control" id="field_requirement" name="requirement" ng-model="vm.userstory.requirement" ng-options="requirement as requirement.name for requirement in vm.requirements track by requirement.id">
                 <option value=""></option>
             </select>
         </div>
