--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -1,7 +1,8 @@
 
 
 <div>
-    <div class="col-md-2" style="background-color: #00b3ee; height: 5000px">
+    <!-- old background color: #00b3ee-->
+    <div class="col-md-2" style="background-color: #589BBE; height: 5000px">
         <div id="projectsidebar">
             <span>
                   <h4>My Projects</h4>
@@ -23,7 +24,8 @@
 
 
     </div>
-    <div class="col-md-7" style="background-color: #abb0a4; height: 5000px">
+    <!-- old background color: #abb0a4-->
+    <div class="col-md-7" style="background-color: white; height: 5000px">
         <jhi-alert></jhi-alert>
         <row>
             <div>
