Added details for user stories and issues into project details page

--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -110,7 +110,7 @@
                     </div>
                     <div id="userstoryid{{userstory.id}}" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <!-- <div ui-view="userstory-detail({id:userstory.id})">View</div> -->
+                            <div ui-view="userstory-detail({id:userstory.id})">View</div>
                             <dl class="row jh-entity-details">
                                 <dt><span>Title</span></dt>
                                 <dd>
