--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -70,43 +70,59 @@
             <span>
                   <h4>My Projects</h4>
             </span>
-            <!--<span>-->
-                <!--<button class="btn btn-primary" ui-sref="project.new">-->
-                <!--&lt;!&ndash;<span class="glyphicon glyphicon-plus"></span>&ndash;&gt;-->
-                    <!--Add Project-->
-                <!--</button>-->
-            <!--</span>-->
             <hr>
             <div class="project-listing" ng-repeat="project in vm.myProjects track by project.id">
-                <!--<button type="submit" ui-sref="project-detail({id:project.id})" class="btn btn-sm">-->
-                <!--<span class="glyphicon glyphicon-eye-open"></span>-->
-                <!--<span class="hidden-sm-down"></span>-->
-                <!--</button>-->
                 <a ui-sref="project-detail({id:project.id})">{{project.name}}</a>
             </div>
         </div>
     </div>
-    <div class="col-md-10" style="background-color: white; height: 1000px">
+        <div class="col-md-10" style="background-color: white; height: 1000px">
+            <h3 style="text-align: center; color: grey;">My Dashboard</h3>
         <div class="dashboard">
             <div class="current-projects">
-                <h3 style="text-align: center; color: grey">My Dashboard</h3>
                 <div class="projects-container">
-                    <button class="show-projects" data-toggle="collapse" data-target="#project-name-list" type="button">Show Projects</button>
+                    <button class="show-projects" data-toggle="collapse" data-target="#project-name-list" type="button">View Projects</button>
                     <div id="project-name-list" class="collapse" ng-repeat="project in vm.myProjects track by project.id">
                         <!-- Create a collapseable bar that when clicked shows project detail list -->
                         <div class="project-detail">
+                        <div>Name: {{project.name}}</div>
+                        <div>Description: {{project.description}}</div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="requirements">
+                <div class="requirements-container">
+                    <!-- Create a collapseable bar that when clicked shows requirements list assigned to user -->
+                    <button class="show-requirements" data-toggle="collapse" data-target="#requirements-list" type="button">View Requirements</button>
+                    <div id="requirements-list" class="collapse" ng-repeat="project in vm.myProjects track by project.id">
+                        <div class="requirement-detail">
                             <div>Name: {{project.name}}</div>
                             <div>Description: {{project.description}}</div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="userstory">
+                <div class="userstory-container">
+                    <!-- Create a collapseable bar that when clicked shows requirements list assigned to user -->
+                    <button class="show-userstories" data-toggle="collapse" data-target="#userstory-list" type="button">View User Stories</button>
+                    <div id="userstory-list" class="collapse" ng-repeat="project in vm.myProjects track by project.id">
+                        <div class="userstory-detail">
+                            <div>Name: {{project.name}}</div>
+                            <div>Description: {{project.description}}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="current-issues">
-                <!-- Collapseable current high priority issues bar -->
                 <div class="issues-container">
-                    <button class="show-issues" data-toggle="collapse" data-target="#issues-list" type="button">Show Issues</button>
+                    <!-- Create a collapseable bar that when clicked shows user issues list -->
+                    <button class="show-issues" data-toggle="collapse" data-target="#issues-list" type="button">View Issues</button>
                     <div id="issues-list" class="collapse" ng-repeat="issue in vm.issues track by issue.id">
-                        <!-- Create a collapseable bar that when clicked shows issues list -->
                         <div class="issue-detail">
                             <div>Name: {{issue.name}}</div>
                             <div>Status: {{issue.status}}</div>
