--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -76,15 +76,15 @@
             </div>
         </div>
     </div>
-    <div class="col-md-10" style="background-color: white; height: 1000px">
+    <div class="col-md-10" style="background-color: white; height: 100%">
         <h3 style="text-align: center; color: grey;">My Dashboard</h3>
         <div class="dashboard">
             <div class="current-projects">
                 <div class="projects-container">
                     <button class="show-projects" data-toggle="collapse" data-target="#project-name-list" type="button">View Projects</button>
-                    <div id="project-name-list" class="collapse" ng-repeat="project in vm.myProjects track by project.id">
+                    <div id="project-name-list" class="collapse">
                         <!-- Create a collapseable bar that when clicked shows project detail list -->
-                        <div class="project-detail">
+                        <div class="project-detail" ng-repeat="project in vm.myProjects track by project.id">
                         <div>Name: {{project.name}}</div>
                         <div>Description: {{project.description}}</div>
                     </div>
@@ -96,8 +96,8 @@
                 <div class="requirements-container">
                     <!-- Create a collapseable bar that when clicked shows requirements list assigned to user -->
                     <button class="show-requirements" data-toggle="collapse" data-target="#requirements-list" type="button">View Requirements</button>
-                    <div id="requirements-list" class="collapse" ng-repeat="requirement in vm.requirements track by requirement.id">
-                        <div class="requirement-detail">
+                    <div id="requirements-list" class="collapse">
+                        <div class="requirement-detail" ng-repeat="requirement in vm.requirements track by requirement.id">
                             <div>Name: {{requirement.name}}</div>
                             <div>Status: {{requirement.status}}</div>
                         </div>
@@ -107,10 +107,10 @@
 
             <div class="userstory">
                 <div class="userstory-container">
-                    <!-- Create a collapseable bar that when clicked shows requirements list assigned to user -->
+                    <!-- Create a collapseable bar that when clicked shows user story list assigned to user -->
                     <button class="show-userstories" data-toggle="collapse" data-target="#userstory-list" type="button">View User Stories</button>
-                    <div id="userstory-list" class="collapse" ng-repeat="userstory in vm.userstories track by userstory.id">
-                        <div class="userstory-detail">
+                    <div id="userstory-list" class="collapse">
+                        <div class="userstory-detail" ng-repeat="userstory in vm.userstories track by userstory.id">
                             <div>Title: {{userstory.name}}</div>
                             <div>Description: {{userstory.description}}</div>
                             <div>Status: {{userstory.status}}</div>
@@ -126,8 +126,8 @@
                 <div class="issues-container">
                     <!-- Create a collapseable bar that when clicked shows user issues list -->
                     <button class="show-issues" data-toggle="collapse" data-target="#issues-list" type="button">View Issues</button>
-                    <div id="issues-list" class="collapse" ng-repeat="issue in vm.issues track by issue.id">
-                        <div class="issue-detail">
+                    <div id="issues-list" class="collapse">
+                        <div class="issue-detail" ng-repeat="issue in vm.issues track by issue.id">
                             <div>Name: {{issue.name}}</div>
                             <div>Status: {{issue.status}}</div>
                             <div>Priority: {{issue.priority}}</div>
