Fixed bug that wasn't allowing for the names of user stories to be displayed on the dashboard.

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -111,7 +111,7 @@
                     <button class="show-userstories" data-toggle="collapse" data-target="#userstory-list" type="button">View User Stories</button>
                     <div id="userstory-list" class="collapse">
                         <div class="userstory-detail" ng-repeat="userstory in vm.userstories track by userstory.id">
-                            <div>Title: {{userstory.name}}</div>
+                            <div>Title: {{userstory.title}}</div>
                             <div>Description: {{userstory.description}}</div>
                             <div>Status: {{userstory.status}}</div>
                             <div>Priority: {{userstory.priority}}</div>
