--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -21,7 +21,7 @@
                 <!--<button type="submit" ui-sref="project-detail({id:project.id})" class="btn btn-sm">-->
                 <!--<span class="glyphicon glyphicon-eye-open"></span>-->
                 <!--<span class="hidden-sm-down"></span>-->
-                <a ui-sref="project-detail({id:project.id})">{{project.name}}</a>
+                <a id="projects" ui-sref="project-detail({id:project.id})">{{project.name}}</a>
             </div>
         </div>
 
