--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -65,14 +65,14 @@
 
 <!-- This is the 'section' that will show once the user logs in -->
 <div ng-show="vm.isAuthenticated()">
-    <div class="col-md-2" style="background-color: #589BBE; height: 1000px">
+    <div class="col-md-2" style="background-color: #589BBE; height: 100%">
         <div id="projectsidebar">
             <span>
                   <h4>My Projects</h4>
             </span>
             <hr>
             <div class="project-listing" ng-repeat="project in vm.myProjects track by project.id">
-                <a ui-sref="project-detail({id:project.id})">{{project.name}}</a>
+                <a id="projects" ui-sref="project-detail({id:project.id})">{{project.name}}</a>
             </div>
         </div>
     </div>
