--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -132,7 +132,7 @@
                             <div>Status: {{issue.status}}</div>
                             <div>Priority: {{issue.priority}}</div>
                             <div>Comments: {{issue.comments}}</div>
-                            <div>Project: {{issue.project}}</div>
+                            <div>Project: {{issue.project.name}}</div>
                         </div>
                     </div>
                 </div>
