Added user story data to issue detail on the dashboard.

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -133,6 +133,7 @@
                             <div>Priority: {{issue.priority}}</div>
                             <div>Comments: {{issue.comments}}</div>
                             <div>Project: {{issue.project.name}}</div>
+                            <div>Userstory: {{issue.userstory.title}}</div>
                         </div>
                     </div>
                 </div>
